--- a/jenkins_controller/casc.yml
+++ b/jenkins_controller/casc.yml
@@ -73,6 +73,14 @@ tool:
           installers:
           - sonarRunnerInstaller:
               id: "4.7.0.2747"
+  terraform:
+    installations:
+    - name: "Terraform"
+      properties:
+      - installSource:
+          installers:
+          - terraformInstaller:
+              id: "30816-linux-amd64"
 
 unclassified:
   location:
